<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_world"/>

    <Button
        android:text="@string/log_out"
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/view_complaints"
        android:id="@+id/view_complaints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>