<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity"
    android:background="@color/background_color">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailTitle"
        android:text="@string/title"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:textColor="@color/txt_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailDate"
        android:text="@string/date"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp"
        android:textColor="@color/small_text_color"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:padding="20dp"
        android:text="@string/description"
        android:layout_gravity="center"
        android:id="@+id/detailDesc"
        android:textSize="18sp"
        android:textColor="@color/txt_color"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:id="@+id/previous"
        android:layout_gravity="center"/>

</LinearLayout>