<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".EventCreation">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_event_description"
        android:layout_width="366dp"
        android:layout_height="147dp"
        android:textColor="@color/txt_color"
        android:textColorHint="@color/txt_color"
        android:layout_marginBottom="36dp"
        android:hint="@string/event_description"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/btn_color"
        android:textColor="@color/background_color"
        android:textStyle="bold"
        android:text="@string/btn_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_event_name"
        android:layout_width="371dp"
        android:layout_height="50dp"
        android:textColor="@color/txt_color"
        android:textColorHint="@color/txt_color"
        android:hint="@string/event_name"
        app:layout_constraintBottom_toTopOf="@+id/input_event_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_event_date"
        android:layout_width="371dp"
        android:layout_height="50dp"
        android:textColor="@color/txt_color"
        android:textColorHint="@color/txt_color"
        android:layout_marginBottom="24dp"
        android:hint="@string/event_date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/input_max_attendees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_max_attendees"
        android:layout_width="371dp"
        android:layout_height="50dp"
        android:textColor="@color/txt_color"
        android:textColorHint="@color/txt_color"
        android:layout_marginBottom="12dp"
        android:hint="@string/max_attendees"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/input_event_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_event_location"
        android:layout_width="371dp"
        android:layout_height="50dp"
        android:textColor="@color/txt_color"
        android:textColorHint="@color/txt_color"
        android:layout_marginBottom="340dp"
        android:hint="@string/event_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_event_department"
        android:layout_width="371dp"
        android:layout_height="50dp"
        android:textColor="@color/txt_color"
        android:layout_marginBottom="16dp"
        android:hint="@string/event_department"
        android:textColorHint="@color/txt_color"
        app:layout_constraintBottom_toTopOf="@+id/input_event_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_event_location"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_create_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/txt_color"
        android:textColorHint="@color/txt_color"
        android:textStyle="bold"
        android:text="@string/btn_create"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>