<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostQualifications">

    <Button
        android:id="@+id/back_btn"
        android:layout_width="62dp"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:layout_marginTop="10dp"
        app:icon="@drawable/baseline_arrow_back_ios_24"
        app:iconPadding="0dp"
        app:iconTint="@color/background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/pageTitle"
        android:textAlignment="center"
        android:textColor="@color/txt_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page_title">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/a22_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/a22_title" />

                    <Spinner
                        android:id="@+id/a22_grade_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/grades_array"
                        android:minHeight="48dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/a48_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/a48_title" />

                    <Spinner
                        android:id="@+id/a48_grade_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/grades_array"
                        android:minHeight="48dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/a31_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/a31_title" />

                    <Spinner
                        android:id="@+id/a31_grade_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/grades_array"
                        android:minHeight="48dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/a37_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/a37_title" />

                    <Spinner
                        android:id="@+id/a37_grade_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/grades_array"
                        android:minHeight="48dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/a67_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/a67_title" />

                <Spinner
                    android:id="@+id/a67_grade_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/grades_array"
                    android:minHeight="48dp"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <Space
                android:id="@+id/space2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="@+id/page_title"
                app:layout_constraintStart_toStartOf="@+id/page_title"
                app:layout_constraintTop_toBottomOf="@+id/page_title" />

            <Button
                android:id="@+id/check_qual_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_qual_button"
                android:layout_gravity="center_horizontal"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/gpa_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/intial_gpa"
                android:textColor="@color/btn_color"
                android:textStyle="bold|normal"
                android:textFontWeight="@integer/material_motion_duration_medium_2"
                android:textSize="30sp"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/all_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/all_good"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/gpa_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/gpa_low"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/a48_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/a48_low"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/a67_a22_a37_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/a67_low"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />



        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>